--- a/Readme
+++ b/Readme
@@ -6,3 +6,6 @@ The purpose of this app is for learning and practicing React
 - React Basics & Working whit components 
 - React State & Working whit Events
 - Rendering lists & Conditional content
+
+
+The code is in the master branch
